<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".view.activity.ActivityHome">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/search_home"
        android:textColor="@color/orange_home"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <TextView
        android:id="@+id/friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/friend_home"
        android:textColor="@color/black_friend"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_random"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:text="@string/bt_random"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/home_aleatorio_nosotros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_puppies"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:background="@drawable/home_perritos"
        android:text="@string/bt_puppies"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="50dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toEndOf="@+id/bt_random"
        app:layout_constraintTop_toBottomOf="@id/search"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_us"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:background="@drawable/home_aleatorio_nosotros"
        android:text="@string/bt_us"
        android:textAllCaps="false"
        android:layout_marginTop="50dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toEndOf="@id/bt_puppies"
        app:layout_constraintTop_toBottomOf="@id/search"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_search"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:background="@drawable/home_buscar"
        android:text="@string/bt_search"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toEndOf="@id/bt_us"
        app:layout_constraintTop_toBottomOf="@id/search"/>

    <TextView
        android:id="@+id/adopt_me"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Adoptame"
        android:textSize="40dp"
        android:textColor="@color/orange_home"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/bt_random"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_home"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/adopt_me"/>






</androidx.constraintlayout.widget.ConstraintLayout>