<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/search_home"
        android:textColor="#FF9800"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/friend_home"
        android:textColor="@color/black_friend"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search"
        />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        android:src="@drawable/ic_back"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/tv_integrantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/integrantes"
        android:textSize="40sp"
        android:textColor="#FF9800"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_members"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_integrantes"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_nosotros"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/recycler_members"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_us"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_us"
        android:layout_marginTop="20dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>